--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,20 @@
   width: 64px;
   height: 64px;
 }
+
+.container {
+  padding: 24px;
+  background-color: #F7F9FC;
+}
+
+.header hr {
+  background-color: #E2E6EE;
+  border-color: #E2E6EE;
+  height:1px;
+  border:0;
+}
+
+.appPage {
+  display: flex;
+  flex-direction: row;
+}
