--- a/src/component/resume/Skill.css
+++ b/src/component/resume/Skill.css
@@ -1,13 +1,177 @@
+
+
 .skill {
     display: flex;
     flex-direction: row;
-    margin-left: 8px;
+    margin-left: 16px;
+
+    font-family: "DM Sans";
+    font-style: normal;
+    font-size: 7px;
+    font-weight: 500;
+    line-height: 9px; /* 128.571% */
+    
+}
+
+.skill ul {
+    margin-left: 0px;
+    padding: 0px;
 }
 
 .skill li {
-    width: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 8px;
+    list-style: none;
+    list-style-type: none;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: row;
+}
+
+.intro-card{
+    display: flex;
+    width: 56px;
+    padding: 8px 0px;
+    margin: 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 4px;
+    align-self: stretch;
+}
+
+.intro-card p {
+    margin: 0px;
+    font-family: "DM Sans";
+    font-size: 7px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 9px; /* 128.571% */
+}
+
+.intro-card img {
+    border-image: 80%;
+    width: 10px;
+    height: 10px;
+    padding: 2px;
     background-color: #F7F9FC;
-    border-radius: 3px;
+    border-radius: 50%;
+}
+.language-icon {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%239251F7' d='m8 18l-6-6l6-6l1.425 1.425l-4.6 4.6L9.4 16.6zm8 0l-1.425-1.425l4.6-4.6L14.6 7.4L16 6l6 6z'/%3E%3C/svg%3E");
+  }
+.framework-icon {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23F77B6B' d='M23.186 9.07L21.41 8.019a2.78 2.78 0 0 1-1.344-2.391V3.523c0-.431-.19-.837-.516-1.108A11.965 11.965 0 0 0 16.317.493a1.356 1.356 0 0 0-1.193.091L13.347 1.64a2.622 2.622 0 0 1-2.688 0L8.882.584a1.348 1.348 0 0 0-1.194-.09a11.93 11.93 0 0 0-3.231 1.918a1.44 1.44 0 0 0-.516 1.108v2.104c0 .986-.51 1.897-1.344 2.392L.823 9.068c-.363.215-.61.588-.675 1.013A12.24 12.24 0 0 0 0 12.001c0 .651.048 1.292.145 1.916c.065.425.312.801.675 1.016l1.774 1.052a2.78 2.78 0 0 1 1.344 2.392v2.104c0 .431.191.837.516 1.108c.965.8 2.054 1.452 3.231 1.919c.393.155.831.124 1.194-.091l1.777-1.055a2.622 2.622 0 0 1 2.688 0l1.777 1.055c.363.215.804.246 1.193.091a11.973 11.973 0 0 0 3.232-1.92a1.44 1.44 0 0 0 .516-1.107v-2.104a2.78 2.78 0 0 1 1.344-2.392l1.774-1.052c.363-.215.61-.588.675-1.016c.094-.624.145-1.265.145-1.916c0-.652-.048-1.293-.145-1.917a1.41 1.41 0 0 0-.67-1.013zM12.003 19.41c-3.981 0-7.21-3.317-7.21-7.407s3.229-7.406 7.21-7.406c3.98 0 7.21 3.316 7.21 7.406s-3.23 7.407-7.21 7.407'/%3E%3C/svg%3E");}
+.database-icon {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23516CF7' d='M20 18c0 2.21-3.582 4-8 4s-8-1.79-8-4v-4.026c.502.617 1.215 1.129 2.008 1.525C7.58 16.285 9.7 16.75 12 16.75s4.42-.465 5.992-1.25c.793-.397 1.506-.91 2.008-1.526z'/%3E%3Cpath fill='%23516CF7' d='M12 10.75c2.3 0 4.42-.465 5.992-1.25c.793-.397 1.506-.91 2.008-1.526V12c0 .5-1.786 1.591-2.679 2.158c-1.323.661-3.203 1.092-5.321 1.092s-3.998-.43-5.321-1.092C5.5 13.568 4 12.5 4 12V7.974c.502.617 1.215 1.129 2.008 1.525C7.58 10.285 9.7 10.75 12 10.75'/%3E%3Cpath fill='%23516CF7' d='M17.321 8.158C15.998 8.819 14.118 9.25 12 9.25s-3.998-.43-5.321-1.092c-.515-.202-1.673-.843-2.477-1.879a.81.81 0 0 1-.162-.621c.023-.148.055-.301.096-.396C4.828 3.406 8.086 2 12 2c3.914 0 7.172 1.406 7.864 3.262c.041.095.073.248.096.396a.81.81 0 0 1-.162.621c-.804 1.036-1.962 1.677-2.477 1.879'/%3E%3C/svg%3E");
+
+}
+.language-outcircle {
+    width: 10px;
+    height: 10px;
+    padding: 2px;
+    background-color: #EFE2F9;
+    border-radius: 50%;
+}
+.database-outcircle {
+    width: 10px;
+    height: 10px;
+    padding: 2px;
+    background-color: #E1E7FE;
+    border-radius: 50%;
+}
+.framework-outcircle {
+    width: 10px;
+    height: 10px;
+    padding: 2px;
+    background-color: #FEE1E1;
+    border-radius: 50%;
+}
+
+.language-font-color {
+    display: flex;
+    flex-direction: row;
+    margin-left: 8px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.05px;
+
+}
+.language-font-color p {
+    width: auto;
+    display: flex;
+    align-items: center;
+    font-size: 7px;
+    background-color: #F7F9FC;
+    margin: 0px 4px 0px 0px;
+    border-radius: 4px;
     padding: 8px;
-    margin-left: 4px;
+    color: #9251F7;
+}
+
+.database {
+    display: flex;
+    flex-direction: row;
+    margin-left: 8px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.05px;
+}
+
+.database p {
+    width: auto;
+    display: flex;
+    align-items: center;
+    font-size: 7px;
+    background-color: #F7F9FC;
+    margin: 0px 4px 0px 0px;
+    border-radius: 4px;
+    padding: 8px;
+    color: #516CF7;
+}
+
+.framework {
+    display: flex;
+    flex-direction: row;
+    margin-left: 8px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.05px;
+}
+
+.framework p {
+    width: auto;
+    display: flex;
+    align-items: center;
+    font-size: 7px;
+    background-color: #F7F9FC;
+    margin: 0px 4px 0px 0px;
+    border-radius: 4px;
+    padding: 8px;
+    color: #F77B6B;
 }
