--- a/src/App.css
+++ b/src/App.css
@@ -36,26 +36,63 @@
     transform: rotate(360deg);
   }
 }
-
-.gray-box {
-  background: gray;
-  width: 64px;
-  height: 64px;
-}
-
 .container {
+  display: flex;
   padding: 24px;
   background-color: #F7F9FC;
+  width: 180px;
+  align-items: flex-start;
 }
-
-.header hr {
+.Header hr {
   background-color: #E2E6EE;
   border-color: #E2E6EE;
   height:1px;
   border:0;
 }
-
 .appPage {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+}
+.container2 {
+  padding: 32px 24px 32px 16px;
+}
+.divider {
+  display: flex;
+  flex-direction: column;
+}
+.divider-dot {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  flex-shrink: 0;
+  color: #FFF;
+  border-radius: 100%;
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.05), 0px 6px 24px 0px rgba(0, 0, 0, 0.04), 0px 1px 1px 0px rgba(0, 0, 0, 0.04) inset;
+}
+.divider-line {
+  border-left: solid #E2E6EE;
+  height: 100%;
+  margin-left: 8px;
+}
+.content {
+  display: flex;
+  flex-direction: row;
+}
+.section p {
+  padding: 0;
+  margin: 0px 0px 16px 16px;
+  font-family: "Outfit", sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px; /* 133.333% */
+  letter-spacing: 0.12px;
+}
+.section {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 0px 24px 0px;
 }
