--- a/src/component/resume/Education.css
+++ b/src/component/resume/Education.css
@@ -2,12 +2,61 @@
     display: flex;
     flex-direction: row;
     margin-left: 8px;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.05px;
 }
 
 .eduWrapper {
     width: 50%;
     background-color: #F7F9FC;
     border-radius: 3px;
-    padding: 8px;
+    padding: 8px 12px 8px 12px ;
     margin-left: 4px;
+}
+
+.edu-date {
+    color: #79819A;
+    font-size: 5px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 9px;
+}
+
+.edu-descript {
+    color: #2E2E48;
+    font-size: 7px;
+}
+
+.edu-grade {
+    display: flex;
+    flex-direction: row;
+    color: #2E2E48;
+    font-size: 6px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 9px;
+}
+.edu-grade p {
+    padding: 0;
+    margin: 0;
+    white-space:nowrap
+}
+
+.edu-icon {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M21 17v-6.9L12 15L1 9l11-6l11 6v8zm-9 4l-7-3.8v-5l7 3.8l7-3.8v5z'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+    margin-right: 8px;
+    margin-bottom: 4px;
 }
