--- a/src/component/resume/Experience.css
+++ b/src/component/resume/Experience.css
@@ -19,9 +19,8 @@
 .expContent {
     display: flex;
     flex-direction: column;
-    margin-top: 8px;
     margin-left: 8px;
-    margin-bottom: 8px;
+    justify-content: space-between;
 }
 
 .explist {
@@ -50,4 +49,20 @@
     font-weight: 500;
     line-height: 9px; /* 128.571% */
     color: #2E2E48;
+}
+.expSection {
+    display: flex;
+    flex-direction: row;
+    margin-top: 4px;
+    margin-bottom: 8px;
+}
+.expSection img {
+    width: 20px;
+    height: 20px;
+    border-radius: 3px;
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.1);
+    margin-left: 12.5px;
+}
+.tech-img {
+    object-fit: cover;
 }
