--- a/src/component/resume/Privacy.css
+++ b/src/component/resume/Privacy.css
@@ -2,10 +2,10 @@
 
 .logo {
     margin-right: 10px; /* 로고와 텍스트 사이의 공간을 추가 */
-    width: 10px;
-    height: 10px;
+    padding: 2.5px;
+    width: 11px;
+    height: 11px;
     background-color: #E2E6EE;
-    border: 6px solid #E2E6EE;
     border-radius: 50%;
     display: flex;
 }
@@ -13,7 +13,6 @@
 .privacy {
     margin: 0px; /* 가운데 정렬 */
     font-family: "DM Sans", sans-serif; /* 폰트 설정 */
-    padding-left: 20px; /* 왼쪽 패딩을 추가하여 컨텐츠에 여백을 줌 */
     display: flex; /* flexbox를 사용하여 로고와 텍스트를 나란히 배치 */
     flex-direction: column; /* 세로로 정렬 */
 }
